# cascade_gaurd_openEnv

./: .dockerignore  .gitignore  ALL_3_FIXES_APPLIED.md  BLOG.md  CASCADEGUARD_MASTER_README.md  COMPLETE_FIX_SUMMARY.md  DISPATCHER_FIX_COMPLETE.md  Dockerfile  FUTURE_IMPROVEMENTS.md  HOW_TO_RUN.md  IMPROVEMENTS_LOG.md  MANUAL_TUNING_GUIDE.md  PHASE2_SUBMISSION_STATUS.md  PHASE_EVALUATION_RESULTS_README.md  README.md  ROOT_CAUSE_FIXES.md  SCORE_CLAMPING_FIXES.md  SUBMISSION_GUIDE.md  TRAINING_GRPO_ISSUES_CHECKLIST.md  __init__.py  _cell29.txt  _cell29_dump.txt  adversarial_attacker.py  baseline_results.json  cascade_env_client.py  cascadeguard_v2.html  cli_display.py  client.py  context.txt  differences.md  geo_utils.py  hackathon_private_rating_report.txt  inference.py  models.py  mypy_output.txt  mypy_utf8.txt  openenv.yaml  package-lock.json  pyproject.toml  questions_harshit_video.md  (+8 more)
backend/: .env  .env.example  Dockerfile  README.md  check_backend_endpoints.py  env_client.py  llm_client.py  main.py  models.py  requirements.txt  session_manager.py
blog/: hf_blog_post.md
data/: cascadeguard_sft_dataset.csv  real_nodes.json
deploy/: README.md  app.py  requirements.txt
scripts/: fetch_real_nodes.py  generate_fallback_nodes.py  validate-submission.sh  verify_training_pipeline.py  verify_upgrade.py
server/: Dockerfile  __init__.py  app.py  cascade_environment.py  graders.py
training/: CascadeGuard_GRPO_Colab.ipynb  CascadeGuard_TRL_Colab_fixed (1).ipynb  CascadeGuard_TRL_Colab_fixed_(1) (1).ipynb  CascadeGuard_TRL_Colab_fixed_(1).ipynb  GRPO_NOTES.md  (+9 more)
(+62 files in other folders)
